--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
 		<developer/>
 	</developers>
 	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
+		<url>https://github.com/ErwanLT/Chaos-Monkey-Interface.git</url>
+		<connection>scm:git:ssh://git@github.com/ErwanLT/Chaos-Monkey-Interface.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/ErwanLT/Chaos-Monkey-Interface.git</developerConnection>
+		<tag>HEAD</tag>
 	</scm>
 	<properties>
 		<java.version>21</java.version>
