--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.application.name=interface
 
 actuator.name=interface
 actuator.url=http://localhost:8089
+
+# Configuration Vaadin
+vaadin.productionMode=true
+vaadin.pnpm.enable=true
+# Force frontend build
+vaadin.frontend.hotdeploy=false
