--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<java.version>21</java.version>
 		<spring-cloud.version>2024.0.1</spring-cloud.version>
 		<vaadin.version>24.7.4</vaadin.version>
+		<vaadin.productionMode>true</vaadin.productionMode>
 	</properties>
 
 	<dependencies>
@@ -109,6 +110,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -184,6 +193,12 @@
 									<goal>prepare-frontend</goal>
 									<goal>build-frontend</goal>
 								</goals>
+								<configuration>
+									<productionMode>true</productionMode>
+									<requireHomeNodeExec>false</requireHomeNodeExec>
+									<pnpmEnable>true</pnpmEnable>
+									<generateBundle>always</generateBundle>
+								</configuration>
 							</execution>
 						</executions>
 					</plugin>
