--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>fr.eletutour.chaosmonkey</groupId>
 	<artifactId>interface</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1.0.3</version>
 	<name>interface</name>
 	<description>Demo project for Spring Boot</description>
 	<url />
@@ -23,7 +23,7 @@
 		<url>https://github.com/ErwanLT/Chaos-Monkey-Interface.git</url>
 		<connection>scm:git:ssh://git@github.com/ErwanLT/Chaos-Monkey-Interface.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/ErwanLT/Chaos-Monkey-Interface.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>v1.0.3</tag>
 	</scm>
 	<properties>
 		<java.version>21</java.version>
@@ -127,7 +127,7 @@
 					<tagNameFormat>v@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<releaseProfiles>production</releaseProfiles>
-					<preparationGoals>vaadin:prepare-frontend vaadin:build-frontend clean verify</preparationGoals>
+					<preparationGoals>com.vaadin:vaadin-maven-plugin:${vaadin.version}:prepare-frontend com.vaadin:vaadin-maven-plugin:${vaadin.version}:build-frontend clean verify</preparationGoals>
 					<goals>deploy</goals>
 				</configuration>
 			</plugin>
