--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>fr.eletutour.chaosmonkey</groupId>
 	<artifactId>interface</artifactId>
-	<version>2.0.0</version>
+	<version>2.0.1-SNAPSHOT</version>
 	<name>interface</name>
 	<description>Demo project for Spring Boot</description>
 	<url />
@@ -23,7 +23,7 @@
 		<url>https://github.com/ErwanLT/Chaos-Monkey-Interface.git</url>
 		<connection>scm:git:ssh://git@github.com/ErwanLT/Chaos-Monkey-Interface.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/ErwanLT/Chaos-Monkey-Interface.git</developerConnection>
-		<tag>v2.0.0</tag>
+		<tag>v1.0.3</tag>
 	</scm>
 	<properties>
 		<java.version>21</java.version>
